Add jobservice monitoring api list worker pool, job queue, scheduler status
